# flowtoy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  evans_bin  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  pypi.yml
docs/: dependency-validation-examples.md  getting-started.md  index.md  myst.yml  tutorial.md
docs/explanation/: design-philosophy.md
docs/how-to/: fetch-rest-api-data.md  manage-secrets.md  monitor-flow-execution.md  run-parallel-steps.md  separate-ui-runner.md  use-python-api.md
docs/how-to-files/: monitor-flow.yaml
docs/reference/: cli.md  configuration.md  flows.md  secret-redaction.md  sources.md  templating.md
docs/scripts/: capture_tui_screenshot.py  capture_webui_screenshot.py
docs/tutorial-files/: process.py  step1.yaml  step2.yaml  step3.yaml  step4.yaml  step5.yaml  step6.yaml  step7.yaml
evans/: __init__.py  cli.py  config.py  runner.py  terminal_ui.py  tui.py  ui_server.py
evans/connectors/: __init__.py  process.py
examples/: demo_long_flow.yaml
examples/01-web-long-flow/: README.md
examples/02-cli-long-flow/: README.md
examples/flows/: university-directory.yaml
flow/: __init__.py  api.py  cli.py  config.py  runner.py  runner_api.py  templating.py  ui_server.py
flow/connectors/: __init__.py  env.py  ldap.py  process.py  (+2 more)
flowtoy/: __init__.py  api.py  cli.py  runner.py  runner_api.py  templating.py  tui.py
tests/: __init__.py  conftest.py  flow_realistic.yaml  flow_realistic_template.yaml  flow_test.yaml  test_concurrency_overlap.py  test_dependency_order.py  test_env_connector.py  test_env_provider.py  test_invalid_dependencies.py  test_on_error_policy.py  test_parallel_scheduler.py  test_process_connector.py  test_process_provider.py  test_realistic_flow.py  test_rest_connector.py  test_rest_provider.py  test_secret_redaction.py  test_source_template_rendering.py  test_status_api.py  test_thread_safety.py
ui/: app.js  index.html
(+27 files in other folders)
