[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtoy"
version = "0.1.0"
description = "flowtoy - Minimal local-first flow runner prototype"
license = {text = "BSD-3-Clause"}
dependencies = ["typer>=0.19", "pyyaml", "jinja2", "requests", "jmespath", "fastapi", "uvicorn", "textual"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "B", "I"]
ignore = ["E203", "C901", "B008", "E402"]

[project.scripts]
flowtoy = "flowtoy.cli:main"

[tool.setuptools.packages.find]
include = ["flowtoy*"]
