[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowtoy"
version = "0.1.0"
description = "flowtoy - Minimal local-first flow runner prototype"
license = {text = "BSD-3-Clause"}
dependencies = ["typer>=0.19", "pyyaml", "jinja2", "requests", "jmespath", "fastapi", "uvicorn", "textual"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0", "pytest-textual-snapshot>=1.0", "black>=24.0", "mypy>=1.0"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "B", "I"]
ignore = ["E203", "C901", "B008", "E402"]

[project.scripts]
flowtoy = "flowtoy.cli:main"

[project.entry-points."flowtoy.providers"]
rest = "flowtoy.providers.rest:RestProvider"
process = "flowtoy.providers.process:ProcessProvider"
env = "flowtoy.providers.env:EnvProvider"
